src/objects/sma__MATerritoryRollupComponent__c.object
<CustomObject>
    <fields>
        <fullName>sma__BaseObject__c</fullName>
        <label>Base Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CrossField__c</fullName>
        <label>Cross Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CrossFilterLogic__c</fullName>
        <label>CrossFilterLogic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__CrossObject__c</fullName>
        <label>Cross Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__GrandparentField__c</fullName>
        <label>Grandparent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ParentField__c</fullName>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>sma__MATerritoryRollupComponent__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Rollup__c</fullName>
        <label>Rollup</label>
        <referenceTo>sma__MATerritoryRollup__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filter</fullName>
                    <default>true</default>
                    <label>Filter</label>
                </value>
                <value>
                    <fullName>Cross Filter</fullName>
                </value>
                <value>
                    <fullName>Subfilter</fullName>
                </value>
                <value>
                    <fullName>Activity Subfilter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Value2__c</fullName>
        <label>Value2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MapAnything Territory Rollup Component</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Rollup Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>